--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,7 +16,8 @@
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
     "vite-plugin-dts": "^3.6.0",
-    "vitest": "^1.0.0"
+    "vitest": "^1.0.0",
+    "@vitest/coverage-v8": "^1.0.0"
   },
   "scripts": {
     "dev": "vite",
