--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^12.0.0",
     "@swc/core": "^1.4.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
@@ -37,6 +40,7 @@
     "husky": "^8.0.0",
     "jsdom": "^23.0.1",
     "prettier": "^3.1.1",
+    "semantic-release": "^23.1.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
