--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@mcp-ui/client",
-  "version": "0.1.0",
+  "version": "0.0.0-semantically-released",
+  "description": "mcp-ui Client SDK",
   "private": false,
   "type": "module",
   "main": "./dist/index.js",
@@ -34,5 +35,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "license": "Apache-2.0"
 }
