--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@mcp-ui/server",
-  "version": "0.1.0",
+  "version": "0.0.0-semantically-released",
+  "private": false,
+  "description": "mcp-ui Server SDK",
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -28,5 +29,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "license": "Apache-2.0"
 }
