--- a/examples/server/tsconfig.json
+++ b/examples/server/tsconfig.json
@@ -15,5 +15,5 @@
 		"strict": true,
 		"skipLibCheck": true
 	},
-	"include": ["worker-configuration.d.ts", "src/**/*.ts"]
+	"include": ["worker-configuration.d.ts", "src/**/*.ts", "app/**/*.ts", "app/**/*.tsx"]
 }
